<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context=".ui.home.HistoriaFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imagTitulo"
                    android:layout_width="259dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/titulo" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/botonmap"
                    android:layout_width="79dp"
                    android:layout_height="75dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/maps" />



        </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="0dp"
                app:cardBackgroundColor="#EFDCE2"
                app:cardCornerRadius="25dp"
                app:cardElevation="25dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/we_welcome_you_to_mena_garden_gastrobar_located_in_the_mena_hostel_typical_andalusian_house_from_the_17th_century_in_the_heart_of_nerja_calle_el_barrio_18"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imagehome1"
                    android:layout_width="151dp"
                    android:layout_height="135dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/imagehome1"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="182dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/mena_garden_is_the_consequence_of_a_long_term_dreamt_project_and_designed_to_finally_open_its_doors_in_july_2020"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="260dp"
                    android:text="@string/a_haven_of_peace_where_you_can_enjoy_its_typical_andalusian_terrace_and_its_garden_area_with_fruit_trees_from_the_area_adorned_with_a_variety_of_flowers"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="360dp"
                    android:text="@string/mena_garden_offers_service_throughout_the_day_starting_with_a_wide_variety_of_breakfasts_english_norwegian_eggs_benedict_a_variety_of_croissants_and_all_accompanied_by_the_best_fresh_fruit"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imagehome2"
                    android:layout_width="155dp"
                    android:layout_height="240dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="480dp"
                    android:contentDescription="@string/string_imagehome2"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="179dp"
                    android:layout_height="280dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="480dp"
                    android:text="@string/in_our_living_room_called_the_tulips_room_on_cold_winter_days_you_will_feel_at_home_in_the_warmth_of_the_wood_fireplace_who_can_resist_a_good_hot_tea_or_coffee_accompanied_by_a_home_made_cake"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="770dp"
                    android:text="@string/would_you_like_a_brunch_or_lunch_well_this_is_your_place_offering_a_wide_variety_of_toasts_salads_with_the_best_fruit_and_why_not_accompany_it_with_the_best_drink_a_good_wine_or_a_cold_beer"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="890dp"
                    android:text="@string/and_more_summer_nights_will_never_be_the_same_in_nerja_come_and_enjoy_the_best_dinners_and_cocktails_in_this_magnificent_place_enjoy_the_breeze_that_the_sal_n_beach_offers_and_share_our_culinary_specialities_such_as_the_famous_mena_boom_with_your_friends_and_family"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1060dp"
                    android:text="@string/in_the_mena_garden_app_you_will_be_able_to_see_our_entire_menu_of_meals_and_cocktails_in_addition_you_will_be_able_to_benefit_from_the_different_events_and_offers_that_will_be_published_enjoy_mena_garden_we_hope_that_your_visit_will_be_the_most_pleasant"
                    android:textColor="@color/black"
                    android:textSize="18sp" />






            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>